Update for new tables
