# app/controllers/AttendanceController.java
@@ -1,6 +1,12 @@
 package controllers;
 
+import java.util.Date;
+
 import models.Attendee;
+import models.AttendeeIn;
+import models.Event;
+import models.RoomAttendance;
+import models.RoomLocation;
 import play.Logger;
 import play.libs.Json;
 import play.mvc.Controller;
@@ -15,6 +21,55 @@ public class AttendanceController extends Controller {
     	return ok(views.html.attendanceform.render());
     }
 
+    
+    public Result postAttendee() {
+		AttendeeIn attendeeIn = Json.fromJson(request().body().asJson(), AttendeeIn.class);
+		String beaconID = attendeeIn.getBeaconID();
+		String eventID = attendeeIn.getEventID();
+		RoomLocation room = dataStaxUtil.getLocation(beaconID);
+		Event event = dataStaxUtil.getEvent(eventID);
+		
+		//if ( saveAttendeeByEvent(attendeeIn, event) && saveRoomAttendanceByEvent(attendeeIn, room)) {
+		if ( saveAttendeeByEvent(attendeeIn, event) ) {
+			return ok(Json.newObject().put("response", "success"));	
+		}
+		else {
+			return badRequest(Json.newObject().put("response", "error"));
+		}
+    }
+
+    public Result getAttendees(String eventID) {
+		Logger.info("Get attendance list");
+		return ok(dataStaxUtil.getAllAttendeeByEvent());		
+    }
+
+	public boolean saveAttendeeByEvent(AttendeeIn attendeeIn, Event event) {
+		
+		Attendee attendee = new Attendee();		
+		attendee.setEventID(attendeeIn.getEventID());
+		attendee.setAttendeeID(attendeeIn.getAttendeeID());
+		attendee.setEventName(event.getName());
+		attendee.setEventAddressL1(event.getAddressL1());
+		attendee.setEventAddressL2(event.getAddressL2());
+		attendee.setEventCity(event.getCity());
+		attendee.setEventState(event.getState());
+		attendee.setEventZip(event.getZip());
+		attendee.setEventCountry(event.getCountry());
+		attendee.setTimestamp(attendeeIn.getTimestamp());
+		
+		attendee = dataStaxUtil.setUserData(attendee);
+		
+		
+		if (dataStaxUtil.saveAttendeeByEvent(attendee)) {
+			return true;
+			//return ok(Json.newObject().put("response", "success"));					
+		} else {
+			return false;
+			//return Controller.badRequest(Json.newObject().put("response", "error"));								
+		}
+	}
+
+	
     /**
      * Sample post body:
      * {
@@ -33,18 +88,38 @@ public class AttendanceController extends Controller {
 	 *
      * @return
      */
-	public Result postAttendee() {
-		Attendee attendee = Json.fromJson(request().body().asJson(), Attendee.class);
-		if (dataStaxUtil.saveAttendee(attendee)) {
-			return ok(Json.newObject().put("response", "success"));					
+	public boolean saveRoomAttendanceByEvent(AttendeeIn attendeeIn, RoomLocation room) {
+		
+		RoomAttendance roomAttendance = new RoomAttendance();		
+		roomAttendance.setAttendeeID(attendeeIn.getAttendeeID());
+		roomAttendance.setEventID(attendeeIn.getEventID());
+		roomAttendance.setEventName(attendeeIn.getEventName());
+		roomAttendance.setRoomName(room.getRoomName());
+		roomAttendance.setRoomFloor(room.getRoomFloor());
+		roomAttendance.setLocationName(room.getPlaceName());
+		roomAttendance.setAddressL1(room.getAddressL1());
+		roomAttendance.setAddressL2(room.getAddressL2());
+		roomAttendance.setLocationCity(room.getCity());
+		roomAttendance.setLocationState(room.getState());
+		roomAttendance.setLocationZip(room.getZip());
+		roomAttendance.setLocationCountry(room.getCountry());
+		roomAttendance.setTimestamp(attendeeIn.getTimestamp());
+		
+		roomAttendance = dataStaxUtil.setUserName(roomAttendance);
+		
+		
+		if (dataStaxUtil.saveRoomAttendance(roomAttendance)) {
+			return true;
+			//return ok(Json.newObject().put("response", "success"));					
 		} else {
-			return Controller.badRequest(Json.newObject().put("response", "error"));								
+			return false;
+			//return Controller.badRequest(Json.newObject().put("response", "error"));								
 		}
 	}
 
-	public Result getAttendees() {
+	public Result getRoomAttendanceByEvent(String eventID) {
 		Logger.info("Get attendance list");
-		return ok(dataStaxUtil.getAttendees());		
+		return ok(dataStaxUtil.getAllRoomAttendanceByEvent());		
 	}
     
 }
